--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.6.0
   flutter_bloc: ^8.1.3
+  flutter_svg: ^2.0.10+1
+  percent_indicator: ^4.2.3
+
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +55,7 @@ flutter:
      - family: Poppins
        fonts:
           - asset: assets/fonts/Poppins-Regular.ttf
+            weight: 900
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
